--- a/API-REST-NODE/.ENV
+++ b/API-REST-NODE/.ENV
@@ -1,3 +1,3 @@
 PORT=8080
 SECRETKEY=manolito
-MONGO_CNN=mongodb+srv://silv:pepega123@clusterpepega.mzmny.mongodb.net/?retryWrites=true&w=majority&appName=ClusterPepega
+MONGO_CNN=mongodb+srv://silv:pepega123@clusterpepega.mzmny.mongodb.net/blablaDB?retryWrites=true&w=majority&appName=ClusterPepega
