WORKS but gotta correct sum

--- a/API-REST-NODE/.ENV
+++ b/API-REST-NODE/.ENV
@@ -1,3 +1,6 @@
 PORT=8080
 SECRETKEY=manolito
 MONGO_CNN=mongodb+srv://silv:pepega123@clusterpepega.mzmny.mongodb.net/blablaDB?retryWrites=true&w=majority&appName=ClusterPepega
+NEO4JUSER=neo4j
+PASS=pepega123
+NEO4JCONN=bolt://127.0.0.1:7687
