--- a/API-REST-NODE/package.json
+++ b/API-REST-NODE/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
     "mongoose": "^8.7.0",
+    "neo4j-driver": "^5.26.0",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
