--- a/API-REST-NODE/package.json
+++ b/API-REST-NODE/package.json
@@ -21,6 +21,7 @@
     "mariadb": "^3.3.1",
     "mongoose": "^8.7.0",
     "neo4j-driver": "^5.26.0",
+    "neode": "^0.4.9",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
