--- a/API-REST-NODE/package.json
+++ b/API-REST-NODE/package.json
@@ -24,6 +24,7 @@
     "neo4j-driver": "^5.26.0",
     "neode": "^0.4.9",
     "nodemon": "^3.1.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "uuid": "^11.0.3"
   }
 }
